--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -77,7 +77,6 @@
     margin: 0.75rem 0;
     border-radius: 10px;
     cursor: pointer;
-    background-color: var(--primary-color);
 
     transition: all 0.3s ease-in-out;
 
@@ -92,14 +91,13 @@
       font-family: var(--font-base);
       color: var(--secondary-color);
       outline: none;
+      &:hover {
+        box-shadow: 0 0 25px var(--primary-color);
+      }
     }
 
     textarea {
       height: 170px;
-    }
-
-    &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
     }
   }
 
@@ -124,7 +122,8 @@
   }
 
   .error {
-    color: red;
+    color: red !important;
+    padding: 10px;
   }
 
   @media screen and (max-width: 768px) {
